added estimated time in tooltip

--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,10 @@
     "dist/upload.js",
     "dist/upload.css"
   ],
+  "dependencies": {
+    "fs-angular-format": "^1.0.0",
+    "fs-angular-date": "^1.0.0"
+  },
   "authors": [
     "Firestitch Inc."
   ],
