--- a/src/bower.json
+++ b/src/bower.json
@@ -9,6 +9,8 @@
     "angular": "1.6.3",
     "angular-material": "1.1.1",
     "angular-ui-router": "0.3.2",
+    "fs-angular-format": "^1.0.0",
+    "fs-angular-date": "^1.0.0",
     "fs-boilerplate-styles": "^1.0.0",
     "ng-file-upload": "latest"
   },
