--- a/src/bower.json
+++ b/src/bower.json
@@ -7,6 +7,7 @@
   "appPath": "app",
   "dependencies": {
     "angular": "1.6.3",
+    "angular-animate": "1.6.3",
     "angular-material": "1.1.1",
     "angular-ui-router": "0.3.2",
     "fs-angular-format": "^1.0.0",
