--- a/src/bower.json
+++ b/src/bower.json
@@ -12,6 +12,7 @@
     "angular-ui-router": "0.3.2",
     "fs-angular-format": "^1.0.0",
     "fs-angular-date": "^1.0.0",
+    "fs-angular-dock": "^1.0.0",
     "fs-boilerplate-styles": "^1.0.0",
     "ng-file-upload": "latest"
   },
